# SFML-simulator

./: CMakeLists.txt
src/: main.cpp
